# devcontainers-playground

./: .pre-commit-config.yaml  Dockerfile  Readme.md  pyproject.toml
.devcontainer/: devcontainer.json
app/: main.py
tests/: conftest.py  test_secret.py  test_version.py
